# scrap

./: Cargo.toml
src/common/: dxgi.rs
src/dxgi/: ffi.rs  mod.rs
